# gimp-plugin-engine-template

./: .autotools  .cproject  .gitignore  .project  AUTHORS  COPYING  Makefile.am  NEWS  README.md  configure.ac
pluginScripts/: Makefile.am  plugin-engine-template.py
src/: Makefile.am  adaptOpenCV.cpp  adaptOpenCV.hpp  gimp-plugin-engine-template  innerRender.cpp  innerRender.hpp  main.c  render.c  render.h
