## Process this file with automake to produce Makefile.in

## lkk 2016 I hacked this file from gimp../plugins/pygimp/plugins/Makefile.am
## pluginexecdir tells autotools where to install scripts
## scripts tells autotools the list of installable Python language scripts

pluginexecdir = $(gimpplugindir)/plug-ins

scripts = \
	plugin-engine-template.py

pluginexec_SCRIPTS = $(scripts)

EXTRA_DIST = $(scripts)
